--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background: url("C:/Users/Usuario/Desktop/prueba/tutorial-react-google-api-login/miprueba/src/imagenes/pulsera.jpg");
+  background: url("../src/imagenes/pulsera.jpg");
   min-height: 100vh;
   display: flex;
   flex-direction: column;
